--- a/public/css/master.css
+++ b/public/css/master.css
@@ -501,3 +501,9 @@ td.center {
 	-moz-border-radius: 5px;
 	border-radius: 5px;	
 }
+
+.fixedElement {
+    position:static;
+    top:0;
+    z-index:100;
+}
