updating keeper deadline

--- a/views/selectKeepers.jade
+++ b/views/selectKeepers.jade
@@ -116,7 +116,7 @@ block content
 				div.widget
 					h2 Rules Refresher
 					ol
-						li Deadline to select keepers is March 1st.
+						li Deadline to select keepers is March 8th.
 						li There is definitely a chance that a player is categorized wrong, has the wrong salary, is on the wrong TEAM, even.
 							| If you notice an issue, please e-mail Ari. I'd like to get rid of all of these issues well before the March 1st keeper 
 							| deadline, so please inspect/verify your team ASAP. 
