--- a/views/team.jade
+++ b/views/team.jade
@@ -393,7 +393,7 @@ block content
 			div(style="width:60%")
 				div.widget#selectKeepers
 					h2 Select Your Keepers
-					p The keeper selection period is now open. It will remain open until March 1st. 
+					p The keeper selection period is now open. It will remain open until March 8th. 
 						a(href="/keepers/" + team.teamId)= "CLICK HERE"
 						|  to make your selections.
 
